# speak

./: .gitignore  README.md  main.py  play_idle_sound.py  pyproject.toml  speak.py
prompts/: admin_schedule_change.md  admin_travel_receipt.md  conference_qna_contribution.md  conference_qna_limitation.md  conference_small_talk_coffee_break.md  conference_small_talk_lunch.md  daily_bank_account_setup.md  daily_cafe_order_customization.md  daily_clinic_symptom_explanation.md  daily_delivery_issue.md  daily_friend_of_friend_intro.md  daily_friend_weekend_plan.md  daily_government_office_registration.md  daily_housing_maintenance.md  daily_neighbor_small_talk.md  daily_phone_plan_setup.md  daily_restaurant_reservation_and_bill.md  daily_store_help_and_checkout.md  daily_transit_delay_help.md  daily_work_break_small_talk.md
